--- a/frontend_next/package.json
+++ b/frontend_next/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.5.0",
     "face-api.js": "^0.22.2",
     "file-saver": "^2.0.5",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.525.0",
     "next": "15.4.7",
     "node-fetch": "^3.3.2",
@@ -23,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1",
     "xlsx": "^0.18.5"
   },
