--- a/frontend_next/package.json
+++ b/frontend_next/package.json
@@ -15,6 +15,7 @@
     "face-api.js": "^0.22.2",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.24",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.525.0",
     "next": "15.4.7",
     "node-fetch": "^3.3.2",
