--- a/frontend_next/package.json
+++ b/frontend_next/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@geist-ui/react": "^2.2.5",
-    "axios": "^1.11.0",
+    "axios": "^1.13.2",
     "chart.js": "^4.5.0",
+    "date-fns": "^4.1.0",
     "face-api.js": "^0.22.2",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.24",
@@ -27,6 +28,7 @@
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1",
+    "uuid": "^13.0.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
