--- a/frontend_next/package.json
+++ b/frontend_next/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@geist-ui/react": "^2.2.5",
+    "@tanstack/react-query": "^5.90.10",
     "axios": "^1.13.2",
     "chart.js": "^4.5.0",
     "date-fns": "^4.1.0",
     "face-api.js": "^0.22.2",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.24",
-    "jspdf": "^3.0.3",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.525.0",
     "next": "15.4.7",
     "node-fetch": "^3.3.2",
