--- a/frontend_next/package.json
+++ b/frontend_next/package.json
@@ -21,12 +21,12 @@
     "jspdf-autotable": "^3.8.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.525.0",
-    "next": "15.4.7",
+    "next": "^16.0.7",
     "node-fetch": "^3.3.2",
     "pdfmake": "^0.2.20",
-    "react": "^18.2.0",
+    "react": "^19.2.1",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^19.2.1",
     "react-icons": "^5.5.0",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
